kubernetes/apps/jellyfin/networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: networkpolicy-jellyfin
  namespace: jellyfin
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from: #Allow traffik from traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "traefik"
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: "traefik"
  - from: #Allow monitoring from kube-prometheus-stack
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "kube-prometheus-stack"
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: "prometheus"
  egress:
  - to: #Allow to WAN
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
  - to: #Allow to HDHomeRun
    - ipBlock:
        cidr: 192.168.20.115/32
  - to: #Allow to DNS
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "kube-system"
    - podSelector:
        matchLabels:
          k8s-app: "kube-dns"
  - to: #Allow to LDAP
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "openldap"
    - podSelector:
        matchLabels:
          app: "openldap"
    ports:
    - protocol: TCP
      port: 389
